# fontmod

./: README.md  pyproject.toml
src/fontmod/: FontContext.py  FontEnumerator.py  FontPicker.py  __main__.py  context.py  enumerator.py  info.py  main.py  picker.py
src/fontmod/platform/: unix.py  windows.py
tests/: test_font_enumerator.py
