[project]
name = "fontmod"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fonttools>=4.59.1",
]

[dependency-groups]
dev = [
    "fire>=0.7.1",
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[project.scripts]
fontmod = "fontmod.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
